2007-03-27  Sanel <karijes@users.sourceforge.net>

	* Added functions that should return XDG paths,
	of EDE_XXX their equivalents.
	* Added (althought unfinished) installation rules 
	to Jamrules

2007-03-26  Sanel <karijes@users.sourceforge.net>

	* Added String::printf
	* String::capacity() behaviour is now more Standard-like

2007-03-25  Sanel <karijes@users.sourceforge.net>

	* A better String class with more methods.
	* Updated tests too.
	* Addded str_ends.

2007-03-23  Sanel <karijes@users.sourceforge.net>

	* Added String class.
	* Fixed str_to(lower/upper) since optimizations flags
	do funny things with it.
	* Added more operators to String class and apropriate
	tests.

2007-03-22  Sanel <karijes@users.sourceforge.net>

	* Added new test suite.

2007-01-11  Sanel <karijes@users.sourceforge.net>

	* Cleaned and documented Debug.h
	* Small addons to Jamrules
	* File::readline returns EOF if end of stream is reached
	* Added File::printf

2007-01-08  Sanel <karijes@users.sourceforge.net>

	* Assertion is now handled via optiona hanler.

2007-01-04  Sanel <karijes@users.sourceforge.net>

	* Finished jam -sSHARED=1 option, so shared library
	be built.
	* Small work on File class.
	* Generator for README (usefull?)

2007-01-03  Sanel <karijes@users.sourceforge.net>

	* More work on File class.

2007-01-01  Sanel <karijes@users.sourceforge.net>

	* test/run.sh - now files are run from this
	directory explicit, so we don't call system wide
	command with the same name

2006-12-29  Sanel <karijes@users.sourceforge.net>

	* Added checks if doxygen exists

2006-12-25  Sanel <karijes@users.sourceforge.net>

	* Finished Config class. Probably needs more polishing,
	but that is comming later.

2006-12-24  Sanel <karijes@users.sourceforge.net>

	* Finished str_trimright, and added test for it
	* Now documentation can be built not only from doc
	directory
	* Added run.sh, script which should run tests.

2006-12-23  Sanel <karijes@users.sourceforge.net>
